[gd_scene load_steps=27 format=3 uid="uid://qwrvk2xgql57"]

[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain.gd" id="1_u1xed"]
[ext_resource type="Script" path="res://GameManager.gd" id="1_y7g4j"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_ysc3o"]
[ext_resource type="Texture2D" uid="uid://d2n61jxlybkns" path="res://ui/Spritesheet_UI_Flat.png" id="2_b8j28"]
[ext_resource type="Script" path="res://Builder.gd" id="2_o1u6h"]
[ext_resource type="Resource" path="res://terrain/data.hterrain" id="2_r3u0o"]
[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain_texture_set.gd" id="3_1bb57"]
[ext_resource type="Texture2D" uid="uid://dixdgi64p64oc" path="res://ui/Custom Button Normal 1.png" id="3_jrplf"]
[ext_resource type="PackedScene" uid="uid://dwb4rok5gb5jr" path="res://enemies/enemy.tscn" id="4_4fhd5"]
[ext_resource type="Texture2D" uid="uid://ccgo12qd55ixh" path="res://ui/Custom Button Active 1.png" id="4_abg41"]
[ext_resource type="Texture2D" uid="uid://cik6t6ks57uok" path="res://terrain/main_slot0_albedo_bump.png" id="4_f26j1"]
[ext_resource type="Script" path="res://enemies/EnemySpawner.gd" id="5_4y38x"]
[ext_resource type="Texture2D" uid="uid://c5bhh86kmrlgi" path="res://ui/turret_icon.png" id="5_edmnx"]
[ext_resource type="Texture2D" uid="uid://dyp34roitubm5" path="res://terrain/main_slot1_albedo_bump.png" id="5_o07kp"]
[ext_resource type="Texture2D" uid="uid://cc6xinnj2r2ua" path="res://terrain/main_slot0_normal_roughness.png" id="6_f6h0i"]
[ext_resource type="Texture2D" uid="uid://brkf0xs52c61j" path="res://terrain/main_slot1_normal_roughness.png" id="7_jau6c"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="14_apxg5"]
[ext_resource type="PackedScene" uid="uid://psyuryugvxoo" path="res://towers/flamethrower.tscn" id="15_nbjsr"]
[ext_resource type="Script" path="res://CameraFollow.gd" id="15_vhu48"]

[sub_resource type="Resource" id="Resource_pmtei"]
script = ExtResource("3_1bb57")
mode = 0
textures = [[ExtResource("4_f26j1"), ExtResource("5_o07kp")], [ExtResource("6_f6h0i"), ExtResource("7_jau6c")]]

[sub_resource type="BoxShape3D" id="BoxShape3D_0pemh"]
size = Vector3(280, 8, 36)

[sub_resource type="BoxShape3D" id="BoxShape3D_gp5tn"]
size = Vector3(140, 8, 36)

[sub_resource type="BoxShape3D" id="BoxShape3D_sjgnh"]
size = Vector3(140, 8, 140)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qxec0"]
sky_top_color = Color(0.830371, 0, 0.287428, 1)
sky_horizon_color = Color(0, 0.654902, 0.670588, 1)
ground_bottom_color = Color(0.301961, 6.38936e-05, 0.303584, 1)
ground_horizon_color = Color(0, 0.654902, 0.670588, 1)
ground_curve = 0.218567

[sub_resource type="Sky" id="Sky_7bhto"]
sky_material = SubResource("ProceduralSkyMaterial_qxec0")

[sub_resource type="Environment" id="Environment_q25op"]
background_mode = 2
sky = SubResource("Sky_7bhto")

[node name="Game" type="Node3D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_y7g4j")

[node name="Builder" type="Node" parent="GameManager"]
script = ExtResource("2_o1u6h")

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatPanel" type="NinePatchRect" parent="UI/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -187.0
offset_top = -154.0
offset_right = -23.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_b8j28")
region_rect = Rect2(32, 32, 96, 96)
patch_margin_left = 32
patch_margin_top = 64
patch_margin_right = 32
patch_margin_bottom = 64
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MoneyLabel" type="RichTextLabel" parent="UI/Control/StatPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 145.0
offset_bottom = 51.0
text = "Money: 0"

[node name="KillsLabel" type="RichTextLabel" parent="UI/Control/StatPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 45.0
offset_right = 145.0
offset_bottom = 85.0
text = "Kills: 0"

[node name="WavePanel" type="NinePatchRect" parent="UI/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 41.0
offset_right = 142.0
offset_bottom = 79.0
grow_horizontal = 2
texture = ExtResource("2_b8j28")
region_rect = Rect2(416, 64, 96, 24)
patch_margin_left = 48
patch_margin_top = 8
patch_margin_right = 40

[node name="Label" type="RichTextLabel" parent="UI/Control/WavePanel"]
layout_mode = 0
offset_top = 11.0
offset_right = 284.0
offset_bottom = 39.0
bbcode_enabled = true
text = "[center][color=black]Wave 1"

[node name="TextureButton" type="TextureButton" parent="UI/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -135.0
offset_right = 29.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_jrplf")
texture_pressed = ExtResource("4_abg41")

[node name="TextureRect" type="TextureRect" parent="UI/Control/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -6.5
offset_right = 12.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_edmnx")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/TextureButton"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 54.0
offset_bottom = 30.0
mouse_filter = 2
bbcode_enabled = true
text = "[color=black]$5"

[node name="EnemySpawner" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 256.358, 0, 11.9438)
script = ExtResource("5_4y38x")
enemy_scene = ExtResource("4_4fhd5")

[node name="Timer" type="Timer" parent="EnemySpawner"]
autostart = true

[node name="Terrain" type="Node3D" parent="."]

[node name="HTerrain" type="Node3D" parent="Terrain"]
script = ExtResource("1_u1xed")
_terrain_data = ExtResource("2_r3u0o")
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource("Resource_pmtei")
render_layers = 1
cast_shadow = 1
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = null
shader_params/u_tile_reduction = null

[node name="NoBuildZone" type="Area3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 246.733, 1.52588e-05, 251.575)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.3748, 0, 6.85005)
shape = SubResource("BoxShape3D_0pemh")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 131.375, 0, 76.8501)
shape = SubResource("BoxShape3D_gp5tn")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -117.625, 0, -53.1499)
shape = SubResource("BoxShape3D_gp5tn")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -46.6252, 0, -111.15)
shape = SubResource("BoxShape3D_gp5tn")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 9.37482, 0, -182.15)
shape = SubResource("BoxShape3D_gp5tn")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 4.37482, 0, 180.85)
shape = SubResource("BoxShape3D_gp5tn")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 77.3748, 0, 127.85)
shape = SubResource("BoxShape3D_gp5tn")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="Terrain/NoBuildZone"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 3.37482, 0, 237.85)
shape = SubResource("BoxShape3D_sjgnh")

[node name="PathPoints" type="Node3D" parent="Terrain"]

[node name="Node3D" type="Node3D" parent="Terrain/PathPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 256, 0, 132)

[node name="Node3D2" type="Node3D" parent="Terrain/PathPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 129, 0, 144)

[node name="Node3D3" type="Node3D" parent="Terrain/PathPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 129, 0, 254)

[node name="Node3D4" type="Node3D" parent="Terrain/PathPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 375.877, 1.52588e-05, 274.116)

[node name="Node3D5" type="Node3D" parent="Terrain/PathPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 374.877, 1.52588e-05, 383.116)

[node name="Node3D6" type="Node3D" parent="Terrain/PathPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 249.585, 1.52588e-05, 390.116)

[node name="Node3D7" type="Node3D" parent="Terrain/PathPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 249.585, 1.52588e-05, 439.116)

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 258.375, 43.3012, 62.7753)
script = ExtResource("14_apxg5")
priority_override = false
priority = 0
follow_mode = 5
follow_target = NodePath("../CameraFollow")
follow_parameters/distance = 50.0
follow_parameters/target_offset = Vector3(0, 0, 0)
follow_parameters/damping = true
follow_parameters/damping_value = 6.0
follow_parameters/dead_zone_horizontal = 0.5
follow_parameters/dead_zone_vertical = 0.4
follow_parameters/viewfinder_in_play = false
look_at_mode = 0
tween_parameters = null
tween_on_load = true
inactive_update_mode = 0
camera_3D_resource = null

[node name="Camera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 258.375, 43.3012, 62.7753)

[node name="PhantomCameraHost" type="Node" parent="Camera"]
script = ExtResource("1_ysc3o")

[node name="CameraFollow" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 258.375, 0, 37.7753)
script = ExtResource("15_vhu48")
depth = 50.0
camera = NodePath("../Camera")
mapSize = 500

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.851727, -0.276894, 0.444849, 0, 0.848972, 0.528438, -0.523986, -0.450085, 0.723092, 180, 88, 0)
light_energy = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_q25op")

[node name="Flamethrower" parent="." node_paths=PackedStringArray("head", "flame_collider", "flame_particles") instance=ExtResource("15_nbjsr")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 280, 0, 31)
head = NodePath("FlamethrowerTurret/Head")
flame_collider = NodePath("FlamethrowerTurret/Head/FlameCollider")
flame_particles = NodePath("FlamethrowerTurret/Head/Flames")

[node name="Flamethrower2" parent="." node_paths=PackedStringArray("head", "flame_collider", "flame_particles") instance=ExtResource("15_nbjsr")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 280, 0, 59)
head = NodePath("FlamethrowerTurret/Head")
flame_collider = NodePath("FlamethrowerTurret/Head/FlameCollider")
flame_particles = NodePath("FlamethrowerTurret/Head/Flames")

[node name="Flamethrower3" parent="." node_paths=PackedStringArray("head", "flame_collider", "flame_particles") instance=ExtResource("15_nbjsr")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 280, 0, 84)
head = NodePath("FlamethrowerTurret/Head")
flame_collider = NodePath("FlamethrowerTurret/Head/FlameCollider")
flame_particles = NodePath("FlamethrowerTurret/Head/Flames")

[node name="Flamethrower4" parent="." node_paths=PackedStringArray("head", "flame_collider", "flame_particles") instance=ExtResource("15_nbjsr")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 280, 0, 107)
head = NodePath("FlamethrowerTurret/Head")
flame_collider = NodePath("FlamethrowerTurret/Head/FlameCollider")
flame_particles = NodePath("FlamethrowerTurret/Head/Flames")

[connection signal="enemy_spawned" from="EnemySpawner" to="GameManager" method="_on_enemy_spawned"]
[connection signal="timeout" from="EnemySpawner/Timer" to="EnemySpawner" method="_on_timer_timeout"]
